2008-03-12  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	fix enumerating to do the right thing

2008-03-12  Alexander Larsson  <alexl@redhat.com>

        * configure.ac:
        * daemon/Makefile.am:
        * daemon/gvfsbackendarchive.[ch]:
	Added archive backend from Benjamin Otte
	Requires libarchive

2008-03-12  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	invalidate the cache of directories that we modified ourselves.
	* daemon/Makefile.am:
	allow 10 threads in parallel

2008-03-12  Hans Petter Jansson  <hpj@novell.com>

	* client/gdaemonfile.c (do_async_path_call): We were testing the
	wrong cancellable pointer for non-NULL-ness, which broke cancellation
	for all async operations. Fix that.

2008-03-11  Alexander Larsson  <alexl@redhat.com>

        * common/gsysutils.c:
        * configure.ac:
	OpenBSB portability fixes.
	Patch from Jasper Lievisse Adriaanse <jasper@humppa.nl>

2008-03-11  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendsftp.c (spawn_ssh):
	Use GError->message, not GError->msg.
	Patch from Jasper Lievisse Adriaanse <jasper@humppa.nl>

2008-03-10  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.2.0.1 ===

2008-03-10  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Bump version to 0.2.0.1 (minor release
	last translation changes)

2008-03-10  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.ac:
	Bump version to 0.2.0

2008-03-10  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.c:
	Free strings with g_free, not dbus_free (#521269)

2008-03-08  Christian Kellner  <gicmo@gnome.org>

	* hal/ghalmount.c: 
	Use dgettext instead of gettext as we are a library.

	* hal/ghalvolume.c: 
	Translate disc names (using dgettext).

2008-03-07  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolumemonitor.c:
        (get_mount_point_for_device):
        (should_volume_be_ignored):